# GalleryTec-Proyecto3

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
Database_Management/: MetadataDatabaseHandler.cpp  MetadataDatabaseHandler.h  UsersDatabaseHandler.cpp  UsersDatabaseHandler.h
GUI/: GalleryTEC_GUI.cpp  GalleryTEC_GUI.h  MainApp.cpp  MainApp.h  MetadataWindow.cpp  MetadataWindow.h  SignInWindow.cpp  SignInWindow.h
ImageManagement/: NewImage.cpp  NewImage.h
MemoryManagement/: FileHandler.cpp  FileHandler.h
MemoryManagementFiles/: Galeriaimagen.txt  ImageMemoryBlock.txt  Usuariogaleria.txt
html/: _file_handler_8h_source.html  _gallery_t_e_c___g_u_i_8h.html  _gallery_t_e_c___g_u_i_8h_source.html  _huffman_compresion_8h_source.html  _main_app_8h.html  _main_app_8h_source.html  _metadata_database_handler_8h_source.html  _new_image_8h_source.html  _read_write_8h_source.html  _sign_in_window_8h.html  _sign_in_window_8h_source.html  _users_database_handler_8h_source.html  annotated.html  bsoncxx_2config_2config_8hpp_source.html  bsoncxx_2config_2export_8hpp_source.html  bsoncxx_2config_2private_2config_8hh_source.html  bsoncxx_2config_2version_8hpp_source.html  class_file_handler-members.html  class_file_handler.html  class_gallery_t_e_c___g_u_i-members.html  class_gallery_t_e_c___g_u_i.html  class_huffman_compresion-members.html  class_huffman_compresion.html  class_main_app-members.html  class_main_app.html  class_metadata_database_handler-members.html  class_metadata_database_handler.html  class_new_image-members.html  class_new_image.html  class_read_write-members.html  class_read_write.html  class_sign_in_window-members.html  class_sign_in_window.html  class_users_database_handler-members.html  class_users_database_handler.html  classes.html  dir_03c61425e29d45849749ec7ca96ca296.html  dir_0bca257b6f7866ff5362718e8319fe13.html  dir_0fc61aa1eba91564449753f2a3b43103.html  dir_171b764decf33d63a7df2fab4f4bc6d8.html  (+43 more)
html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_7.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
huffman/: HuffmanCompresion.cpp  HuffmanCompresion.h
latex/: _file_handler_8h_source.tex  _gallery_t_e_c___g_u_i_8h.tex  _gallery_t_e_c___g_u_i_8h_source.tex  _huffman_compresion_8h_source.tex  _main_app_8h.tex  _main_app_8h_source.tex  _metadata_database_handler_8h_source.tex  _new_image_8h_source.tex  _read_write_8h_source.tex  _sign_in_window_8h.tex  _sign_in_window_8h_source.tex  _users_database_handler_8h_source.tex  annotated.tex  bsoncxx_2config_2config_8hpp_source.tex  bsoncxx_2config_2export_8hpp_source.tex  bsoncxx_2config_2private_2config_8hh_source.tex  bsoncxx_2config_2version_8hpp_source.tex  class_file_handler.tex  class_gallery_t_e_c___g_u_i.eps  class_gallery_t_e_c___g_u_i.tex  class_huffman_compresion.tex  class_main_app.eps  class_main_app.tex  class_metadata_database_handler.tex  class_new_image.tex  class_read_write.tex  class_sign_in_window.eps  class_sign_in_window.tex  class_users_database_handler.tex  files.tex  hierarchy.tex  moc__predefs_8h_source.tex  mongocxx_2config_2config_8hpp_source.tex  mongocxx_2config_2export_8hpp_source.tex  mongocxx_2config_2private_2config_8hh_source.tex  mongocxx_2config_2version_8hpp_source.tex  refman.tex  struct_compressed_image.tex  struct_min_heap.tex  struct_min_heap_node.tex  (+3 more)
local/: ReadWrite.cpp  ReadWrite.h  dictionary.txt
